<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameTypeActivity">

    <Button
        android:id="@+id/addButton"
        android:layout_width="196dp"
        android:layout_height="124dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="377dp"
        android:onClick="addButtonClick"
        android:text="@string/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="196dp"
        android:layout_height="124dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="253dp"
        android:onClick="subButtonClick"
        android:text="@string/subButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="196dp"
        android:layout_height="124dp"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="377dp"
        android:onClick="multButtonClick"
        android:text="@string/multButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="196dp"
        android:layout_height="124dp"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="253dp"
        android:onClick="divButtonClick"
        android:text="@string/divButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>