<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyScreen">

    <TextView
        android:id="@+id/difficultyTitle"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:contentDescription="@string/difficulty"
        app:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/difficulty"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/easyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/easyButton"
        android:onClick="easyButtonClick"
        app:layout_constraintBottom_toTopOf="@+id/mediumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTitle" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/mediumButton"
        android:onClick="mediumButtonClick"
        app:layout_constraintBottom_toTopOf="@+id/hardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/hardButton"
        android:onClick="hardButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />
</android.support.constraint.ConstraintLayout>